force-app/main/default/objects/Voicecall2__c/Voicecall2__c.object-meta.xml
<CustomObject>
    <description>Dummy Voicecall object for testing</description>
    <label>Voicecall2</label>
    <nameField>
        <label>Voicecall2</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Voicecalls2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>