force-app/main/default/objects/Voicecall2__c/fields/CallEnded__c.field-meta.xml
<CustomField>
    <fullName>CallEnded__c</fullName>
    <label>CallEnded</label>
    <type>DateTime</type>
</CustomField>