force-app/main/default/objects/Voicecall2__c/fields/CallerId__c.field-meta.xml
<CustomField>
    <fullName>CallerId__c</fullName>
    <label>CallerId</label>
    <type>Phone</type>
</CustomField>