force-app/main/default/objects/Voicecall2__c/fields/PrimaryCaseId__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCaseId__c</fullName>
    <label>PrimaryCaseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>